# rscripter

./: Cargo.toml  README.md
examples/: cmd.rs  hello.rs  paths.rs
src/: lib.rs
