[package]
name = "rscripter"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Template for writing scripts in rust"
authors = ["aQaTL"]
repository = "https://github.com/aQaTL/rscripter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
